# django-enterprise-template

./: .coveragerc  .dockerignore  .env.prod_template  .env_template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: docker-build.yml  lint.yml  tests.yml
docker/: .env_template  Dockerfile.python.dev  Dockerfile.python.prod  docker-compose-develop.yaml  docker-compose-prod.yaml  docker-compose.ci.yaml
nginx/: nginx.conf
scripts/: lint-and-typecheck.ps1  lint-and-typecheck.sh
src/: celery_app.py  urls.py
src/apps/core/: exception_handler.py  models.py  tasks.py  urls.py
src/apps/core/api/: views.py
src/apps/core/tests/: test_celery_ping_task.py  test_handler_exception.py  test_healthcheck.py
src/settings/: __init__.py  base.py  local.py  production.py
